# cpp-chess

./: CMakeLists.txt  README.md  compile_flags.txt
src/: main.cpp
src/core/: board.cpp  board.hpp  piece.cpp  piece.hpp
src/ui/: control.cpp  control.hpp  display.cpp  display.hpp
